--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,8 @@
     font-family: 'Poppins', sans-serif;
     font-weight: 400;
 }
+
+.frontFive{
+    font-family: 'Poppins', sans-serif;
+    font-weight: 400;
+}
