--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,21 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+*{
+  padding: 0;
+
+  max-width: 1400px;
+  margin: 0 auto;
+}
+
+
+@media (max-width: 768px) {
+ 
+
+  *{
+    max-width: 100%; 
+    margin: 0 0;
+    
+  }
+}
