--- a/src/App.css
+++ b/src/App.css
@@ -5,5 +5,10 @@
 
 .frontFive{
     font-family: 'Poppins', sans-serif;
-    font-weight: 400;
+    font-weight: 500;
+}
+
+.frontSix{
+    font-family: 'Poppins', sans-serif;
+    font-weight: 600;
 }
