resposive md lg xl

--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,20 @@
 
   max-width: 1400px;
   margin: 0 auto;
+ 
 }
+
+
+
+@media screen and (min-width: 769px) and (max-width: 1299px) { 
+  *{
+    max-width: 100%; 
+    margin: 0 auto;
+   
+    
+  }
+}
+
 
 
 @media (max-width: 768px) {
