--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-*{
+:root{
   padding: 0;
   margin: 0;
 }
@@ -7,7 +7,7 @@
 @tailwind components;
 @tailwind utilities;
 
-*{
+:root{
   padding: 0;
 
   max-width: 1400px;
